@@ -1,14 +1,0 @@
-Source: cppunit
-Section: devel
-Priority: optional
-Maintainer: Steve M. Robbins <smr@debian.org>
-Build-Depends: debhelper (>> 3.0.0), autoconf, doxygen
-Standards-Version: 3.5.2
-
-Package: cppunit
-Architecture: any
-Description: The Unit Testing Library for C++
- CppUnit is a simple Testing Framework for C++ similar to xUnit or
- JUnit. You can get the information about Testing Framework on the
- web site:
- <URL:http://www.xprogramming.com/>
