@@ -1,25 +1,0 @@
-cppunit (1.6.1-1) unstable; urgency=low
-
-  * New upstream release.
-  * New maintainer.
-  * Include updated config.guess and config.sub.  Closes: #104686.
-  * Do not supply shared library.
-  * Remove cppunit-config.1; upstream now installs manpage.
-
- -- Steve M. Robbins <smr@debian.org>  Sun, 30 Sep 2001 23:52:05 -0400
-
-cppunit (1.5.4-2) unstable; urgency=low
-
-  * added autoconf to build-depends (thanks to Rick Younie
-    <younie@debian.org>)
-
- -- Christian Leutloff <leutloff@debian.org>  Tue,  8 May 2001 21:43:09 +0200
-
-cppunit (1.5.4-1) unstable; urgency=low
-
-  * Initial Release (closes: #94762).
-  * Added manpage for cppunit-config and added --help to cppunit-config. 
-
- -- Christian Leutloff <leutloff@debian.org>  Mon, 23 Apr 2001 19:57:19 +0200
-
-
